# sqnd-probe

./: .gitignore  BIP_Colab_Experiment.py  BIP_DRIVE_SAFE.ipynb  BIP_Experiment.ipynb  BIP_Experiment_bidirectional.ipynb  BIP_Experiment_fixed.ipynb  BIP_Experiment_v3.ipynb  BIP_FAST_FINAL.ipynb  BIP_Full_Tensor_Protocol_v2.md  BIP_REVIEWERS_GUIDE.docx  BIP_REVIEWERS_GUIDE.md  BIP_TEMPORAL_INVARIANCE_PROTOCOL.md  BIP_paper_draft.md  BIP_reviewer_friendly.ipynb  BIP_v10.10.ipynb  BIP_v10.11.ipynb  BIP_v10.12.ipynb  BIP_v10.14_OPERATOR_GUIDE.docx  BIP_v10.14_OPERATOR_GUIDE.md  BIP_v10.14_RESULTS_REPORT.md  BIP_v10.15.1_OPERATOR_GUIDE.md  BIP_v10.1_complete.ipynb  BIP_v10.2_Technical_Guide.md  BIP_v10.2_expanded.ipynb  BIP_v10.3_README.md  BIP_v10.3_expanded.ipynb  BIP_v10.4_README.md  BIP_v10.4_expanded.ipynb  BIP_v10.5_expanded.ipynb  BIP_v10.6_expanded.ipynb  BIP_v10.7_expanded.ipynb  BIP_v10.8_expanded.ipynb  BIP_v10.9.ipynb  BIP_v10.9_SPEC.md  BIP_v10_12_01-16-2026_02.ipynb  BIP_v10_13.ipynb  BIP_v10_14.ipynb  BIP_v10_14_1.ipynb  BIP_v10_14_2.ipynb  BIP_v10_14_4.ipynb  (+95 more)
.github/workflows/: ci.yaml
docs/: BIP_v10.14.4_Results_Analysis.md  Bond_Index_Primer.docx  Bond_Index_Primer.md  GROUND_TRUTH_DISCOVERY_PLAN.md  experiment_protocol.md
ground_state/: dear_abby_ground_state_v1.json
paper/: response_to_critique.md  sqnd_probe_paper.tex
scripts/: convert_dear_abby.py
src/bip/: __init__.py  train.py
src/bip/data/: __init__.py  extract_bonds.py  generate_splits.py  preprocess.py
src/bip/evaluation/: __init__.py
src/bip/models/: __init__.py  bip_model.py
src/dear_ethicist/: __init__.py  cli.py  dimensional_choices.py  letters.py  models.py  reactions.py  telemetry.py
src/dear_ethicist/letters/: correlatives.yaml  engineered_core.yaml  ethical_facts_probes.yaml  family.yaml  promises.yaml  relationships.yaml  workplace.yaml
src/dear_ethicist/letters/archive/: dear_abby_01.yaml  dear_abby_02.yaml  dear_abby_03.yaml  dear_abby_04.yaml  dear_abby_05.yaml  dear_abby_06.yaml  dear_abby_07.yaml  dear_abby_08.yaml  dear_abby_09.yaml  dear_abby_10.yaml  dear_abby_11.yaml  dear_abby_12.yaml  dear_abby_13.yaml  dear_abby_14.yaml  dear_abby_15.yaml  dear_abby_16.yaml  dear_abby_17.yaml  dear_abby_18.yaml  dear_abby_19.yaml  dear_abby_20.yaml  dear_abby_21.yaml  dear_abby_22.yaml  dear_abby_23.yaml  dear_abby_24.yaml  dear_abby_25.yaml  dear_abby_26.yaml  dear_abby_27.yaml  dear_abby_28.yaml  dear_abby_29.yaml  dear_abby_30.yaml  dear_abby_31.yaml  dear_abby_32.yaml  dear_abby_33.yaml  dear_abby_34.yaml  dear_abby_35.yaml  dear_abby_36.yaml  dear_abby_37.yaml  dear_abby_38.yaml  dear_abby_39.yaml  dear_abby_40.yaml  (+1 more)
src/dear_ethicist/simulation/: __init__.py  ground_state.py  runner.py
tests/: __init__.py  conftest.py  test_d4_group_law.py  test_dimensional_choices.py  test_letters.py  test_models.py  test_reactions.py  test_telemetry.py
